# Sibyl-System-Bot

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config
.github/workflows/: rust.yml
assets/: app.ico.credits.md  sibyl_icon.pdn
src/: commands.rs  main.rs  userdb.rs
win32/: Cargo.toml  build.rs
win32/src/: lib.rs  win32.cpp
