[package]
name = "sibyl-system"
version = "0.1.0"
authors = ["Gordon Zhang <g-zhang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
win32 = { path = "win32" }
tokio = { version = "1.0", features = ["macros", "signal", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "framework", "standard_framework", "rustls_backend"], version = "0.10.5"}
tracing = "0.1.23"
tracing-subscriber = "0.2"
vader_sentiment = { path = "vader-sentiment-rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"