[package]
name = "win32"
version = "0.1.0"
authors = ["Gordon Zhang <g-zhang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.23"

[target.'cfg(windows)'.build-dependencies]
cc = "1.0"